deployments/unifi-controller/ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: unifi-webui-service
  namespace: unifi-controller
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
  selector:
    name: unifi-controller
  type: ClusterIP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-unifi
  namespace: unifi-controller
spec:
  rules:
    - host: unifi.home.krinchan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-webui-service
                port:
                  number: 80
